# ControlDeInventario

./: .gitignore  00_START_HERE.bat  DETENER_SISTEMA.bat  Dockerfile.backend  ESTADO_SISTEMA.bat  INICIAR_SISTEMA.bat  INSTALAR_DEPENDENCIAS.bat  README.md  REINICIAR_SISTEMA.bat  VERIFICATION_REPORT.md  add_products.py  check_counts.py  check_duplicates.py  check_headers.py  check_sheets.py  check_system.py  debug_app.py  debug_direct.py  docker-compose.yml  inspect_excel.py  inspect_locs.py  inspect_nivel_deep.py  inspect_noise.py  pyproject.toml  run_backend.bat  run_configurar_email.bat  run_frontend.bat  run_notificaciones.bat  run_probar_email.bat  services.json  setup_email_config.py  test_api.py  test_email_notification.py  test_filter.py  test_frontend.bat  test_simple.py  verify_analysis.py
